--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
+   <header>
       <div class="container">
        <ul>
         <li><a href="#">Картошка</a></li>
@@ -21,7 +21,7 @@
 
     <main class="container" id="omne">
           <div class="about-me-text">
-               
+            <img src="img/Карбон-мал-2.jpg" alt="">   
             <h2>Немного обо мне</h2>
               <p>Я начинающий специалист по созданию сайтов. Верстаю простые лейдинги, а также сложные сайты по типу магазинов и кооперативных сайтов.</p>
           </div>
