--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
         <div class="container">
         <h2>Связаться со мной</h2>
         <form class="contact-form">
-          <input type="text" placeholder="Your Name">
-          <input type="email" placeholder="Your Email">
-          <textarea placeholder="Message"></textarea>
-          <button>Send message</button>
+          <input type="text" placeholder="Ваше имя">
+          <input type="email" placeholder="Почта">
+          <textarea placeholder="Сообщение"></textarea>
+          <button>Отправить сообщение</button>
           </form>
           </div>
           </section>
