--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <header>
       <div class="container">
        <ul>
-        <li>Сайт портфолио</li>
+        <li><p>Сайт портфолио</p></li>
         <li><a href="#omne">Обо мне</a></li>
        <li><a href="#myWorks">Мои работы</a></li>
           <li><a href="#zacaz">Клиенты</a></li>
